# PathSafe

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_draft.txt  SECURITY.md  TEST_RESULTS.md  pathsafe.desktop  pathsafe.spec  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pypi-publish.yml  release.yml  test.yml  workflow.yml
docs/: COMPLIANCE.md  DEVELOPER.md  INSTRUCTIONS.md  USER_GUIDE.md
installer/: build_appimage.sh  build_macos_dmg.sh  pathsafe.desktop  pathsafe.iss
pathsafe/: __init__.py  anonymizer.py  cli.py  converter.py  gui.py  gui_qt.py  log.py  models.py  openslide_utils.py  report.py  scanner.py  tiff.py  verify.py
pathsafe/assets/: icon.icns
pathsafe/formats/: __init__.py  base.py  bif.py  dicom.py  generic_tiff.py  mrxs.py  ndpi.py  scn.py  svs.py  tiff_base.py
pathsafe/gui/: __init__.py  themes.py  widgets.py  window.py  workers.py
pathsafe/tiff/: __init__.py  blanking.py  hashing.py  parser.py  sub_ifd.py
tests/: conftest.py  test_adversarial.py  test_anonymizer.py  test_bif.py  test_cli.py  test_cli_integration.py  test_converter.py  test_dicom.py  test_exif_gps.py  test_generic_tiff.py  test_integration.py  test_log.py  test_mrxs.py  test_ndpi.py  test_pattern_config.py  test_phi_bypass.py  test_preflight.py  test_report.py  test_roundtrip.py  test_scanner.py  test_scanner_extended.py  test_scn.py  test_stress_concurrency.py  test_stress_dicom.py  test_stress_filenames.py  test_stress_ifd_chains.py  test_stress_rerun.py  test_stress_strip_bounds.py  test_stress_tag_order.py  test_svs.py  test_tiff.py  test_tiff_extended.py  test_unlink_ifd.py  test_verify.py
tools/: independent_scanner.py
