[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pathsafe"
version = "1.0.0"
description = "Hospital-grade WSI anonymizer for pathology slide files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "PathSafe Contributors"},
]
keywords = ["pathology", "anonymization", "NDPI", "SVS", "TIFF", "WSI", "PHI", "HIPAA"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
pathsafe = "pathsafe.cli:main"

[project.gui-scripts]
pathsafe-gui = "pathsafe.gui_qt:main"

[project.optional-dependencies]
gui = [
    "PySide6>=6.5",
]
dicom = [
    "pydicom>=2.3",
]
openslide = [
    "openslide-python>=1.2",
]
all = [
    "PySide6>=6.5",
    "pydicom>=2.3",
    "openslide-python>=1.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["pathsafe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
